--- a/parkingapp/templates/dash_main.html
+++ b/parkingapp/templates/dash_main.html
@@ -127,7 +127,7 @@
         </div>
       </div>
     </div>
-    {% if user.is_superadmin %}
+    {% if user.parking_lot_view %}
     <div class="col-sm-6">
       <div class="card h-100">
         <div class="card-header">Секрет</div>
