--- a/parkingapp/templates/signadmin.html
+++ b/parkingapp/templates/signadmin.html
@@ -108,7 +108,7 @@
       export_right.setAttribute('disabled', 'true')
       parking_control.setAttribute('disabled', 'true')
       barrier_control.setAttribute('disabled', 'true')
-
+      parking_lot.setAttribute('disabled', 'true')
     } else {
       parking_lot.checked = false
       coupon_control.checked = false
@@ -120,6 +120,7 @@
       export_right.removeAttribute('disabled')
       parking_control.removeAttribute('disabled')
       barrier_control.removeAttribute('disabled')
+      parking_lot.removeAttribute('disabled')
     }
   }
   function help() {
