--- a/parkingapp/templates/dash_users.html
+++ b/parkingapp/templates/dash_users.html
@@ -14,13 +14,13 @@
         <tr>
           <th scope="col">ID</th>
           <th scope="col">Имя пользователя</th>
-          <th scope="col">Управление пользователями</th>
+          <th scope="col">Супер администратор</th>
           <th scope="col">Управление парковками</th>
           <th scope="col">Управление шлагбаумами</th>
           <th scope="col">Обнуление чеков</th>
-          <th scope="col">Просмотр панели администратора</th>
+          <th scope="col">Экспорт БД</th>
           <th scope="col">Прикреплен к парковке</th>
-          <th scope="col">Является парковкой</th>
+          <th scope="col">Просмотр секретных ключей</th>
           <th scope="col">Действие</th>
         </tr>
       </thead>
