--- a/parkingapp/templates/info.html
+++ b/parkingapp/templates/info.html
@@ -78,6 +78,17 @@
         </li>
       </ul>
     </div>
+
+    <div class="col-md-6">
+      <h2 class="text-body-emphasis">Администраторам</h2>
+      <ul class="list-unstyled ps-0">
+        <li>
+          <a class="icon-link mb-1" href="{% url 'parkingapp:dash_main' %}">
+            Панель администратора
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
 </main>
 </div>
