--- a/parkingapp/templates/signadmin.html
+++ b/parkingapp/templates/signadmin.html
@@ -72,7 +72,7 @@
         </div>
       </div>
       <button class="w-100 mt-4  btn btn-lg rounded-4 btn-primary" onclick="help()"
-        type="submit">Зарегестрировать</button>
+        type="submit">Зарегистрировать</button>
     </div>
   </form>
 </main>
